Make implementation API 11 compatible.